added footer with a link to my github page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a href="#" class="navbar-brand"><h3>Robert Jones Jr.</h3></a>
+          <a href="#" class="navbar-brand"><h3>About</h3></a>
           <div
             class="collapse navbar-collapse"
             id="navbarToggleExternalContent"
@@ -58,10 +58,10 @@
                 <a href="#About" class="nav-link">About</a>
               </li>
               <li class="nav-item">
-                <a href="#Portfolio" class="nav-link">Portfolio</a>
+                <a href="portfolio.html" class="nav-link">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Contact</a>
+                <a href="contact.html" class="nav-link">Contact</a>
               </li>
             </u>
           </div>
@@ -81,46 +81,54 @@
                   <div class="card-title my-5">
                     <div class="media">
                       <img
-                        src="../2_Responsive-Portfolio/assets/images/profile-img.jpg"
-                        width="250"
-                        height="250"
-                        class="img-fluid rounded-top mx-5 d-none d-lg-block"
+                        src="../week-2-hw/assets/images/profile-img.jpg" height="250px" width="250px" 
+                        class="img-fluid rounded-top mx-5" alt="Responsive image"
                       />
                       <div class="media-body">
                         <h3 class="display-4 ml-5">About Me</h3>
-                        <p class="texr-muted ml-5">
+                        <p class="text-muted ml-5">
                           Stay tunned! This is just the beginning
                         </p>
                         <div class="container">
                           <table class="table table-responsive ml-4">
                             <tr>
-                              <td class="texr-muted">Age</td>
+                              <td class="text-muted">Age</td>
                               <td>:</td>
                               <td>37 Years Old</td>
                             </tr>
                             <tr>
-                              <td class="texr-muted">Email</td>
+                              <td class="text-muted">Email</td>
                               <td>:</td>
                               <td>jones9682@yahoo.com</td>
                             </tr>
                             <tr>
-                              <td class="texr-muted">Phone</td>
+                              <td class="text-muted">Phone</td>
                               <td>:</td>
-                              <td>+1 (856) 555-5555</td>
+                              <td>+1 (856) 287-1798</td>
                             </tr>
                           </table>
                         </div>
                     </div>
                   </div>
                 </div>
-                <footer class="card-footer bg-danger">
-
-                </footer>
               </div>
             </div>
           </div>
         </div>
       </div>
     </main>
+    <footer class="navbar fixed-bottom navbar-light bg-dark">
+      <a class="navbar-brand" href="#"></a>
+      <p class="footer-text">&copy; Copyright 2020 Robert Jones Jr.</p>
+      <a href="https://github.com/jones9682?tab=repositories"
+        ><img
+          class="social"
+          src="assets/images/github.png"
+          height="40px"
+          width="40px"
+          alt="GitHub"
+        />
+      </a>
+    </footer>
   </body>
 </html>
