--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <!--Navbar-->
-    <div id="Header">
+    <header id="Header">
       <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
         <div class="container">
           <button
@@ -48,25 +48,39 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a href="#" class="navbar-brand"><h3>Robert Jones Jr.</h3></a>
+          <a href="#" class="navbar-brand"><h3>Portfolio</h3></a>
           <div
             class="collapse navbar-collapse"
             id="navbarToggleExternalContent"
           >
             <u class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a href="#About" class="nav-link">About</a>
+                <a href="index.html" class="nav-link">About</a>
               </li>
               <li class="nav-item">
-                <a href="#Portfolio" class="nav-link">Portfolio</a>
+                <a href="portfolio.html" class="nav-link">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Contact</a>
+                <a href="contact.html" class="nav-link">Contact</a>
               </li>
             </u>
           </div>
         </div>
       </nav>
-    </div>
+    </header>
+    <main></main>
+    <footer class="navbar fixed-bottom navbar-light bg-dark">
+      <a class="navbar-brand" href="#"></a>
+      <p class="footer-text">&copy; Copyright 2020 Robert Jones Jr.</p>
+      <a href="https://github.com/jones9682?tab=repositories"
+        ><img
+          class="social"
+          src="assets/images/github.png"
+          height="40px"
+          width="40px"
+          alt="GitHub"
+        />
+      </a>
+    </footer>
   </body>
 </html>
