--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1," />
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -32,7 +29,7 @@
     ></script>
     <title>My Portfolio Website</title>
   </head>
-  <body>
+  <body data-spy="scroll" data-target=".navbar">
     <!--Navbar-->
     <header id="Header">
       <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
@@ -48,7 +45,9 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a href="#" class="navbar-brand"><h3>About</h3></a>
+          <a href="#" class="navbar-brand"
+            ><h3 id="nav-name">Robert Jones Jr.</h3></a
+          >
           <div
             class="collapse navbar-collapse"
             id="navbarToggleExternalContent"
@@ -72,63 +71,59 @@
       <!--ShowCase-->
       <div id="bg-img"></div>
       <!--About Me-->
-      <div id="About">
-        <div class="container">
-          <div class="row">
-            <div class="col">
-              <div id="AboutData">
-                <div class="card bg-white">
-                  <div class="card-title my-5">
-                    <div class="media">
-                      <img
-                        src="../week-2-hw/assets/images/profile-img.jpg" height="250px" width="250px" 
-                        class="img-fluid rounded-top mx-5" alt="Responsive image"
-                      />
-                      <div class="media-body">
-                        <h3 class="display-4 ml-5">About Me</h3>
-                        <p class="text-muted ml-5">
-                          Stay tunned! This is just the beginning
-                        </p>
-                        <div class="container">
-                          <table class="table table-responsive ml-4">
-                            <tr>
-                              <td class="text-muted">Age</td>
-                              <td>:</td>
-                              <td>37 Years Old</td>
-                            </tr>
-                            <tr>
-                              <td class="text-muted">Email</td>
-                              <td>:</td>
-                              <td>jones9682@yahoo.com</td>
-                            </tr>
-                            <tr>
-                              <td class="text-muted">Phone</td>
-                              <td>:</td>
-                              <td>+1 (856) 287-1798</td>
-                            </tr>
-                          </table>
-                        </div>
-                    </div>
-                  </div>
+      <div id="main-container" class="container">
+        <div class="row">
+          <div class="col">
+            <div id="About">
+              <section class="main-section">
+                <h1>About Me</h1>
+                <hr />
+                <img
+                  src="../week-2-hw/assets/images/profile-img.jpg"
+                  class="auth-image"
+                  alt="Robert Jones Jr. profile photo"
+                />
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Rerum nulla veniam laboriosam, ut ullam voluptatibus dolore
+                  culpa dolorem dignissimos perspiciatis amet aliquid nostrum
+                  esse ipsam. Minus non deleniti fuga consequuntur?
+                </p>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. A,
+                  aspernatur magnam? Corrupti quaerat ea aliquam reiciendis,
+                  accusantium suscipit itaque sunt quidem dolor. Vero recusandae
+                  soluta id doloribus obcaecati, dolor optio.
+                </p>
+              </section>
+              <section class="sidebar">
+                <div id="connect">
+                  <h2>Connect with Me</h2>
+
+                  <a href="https://github.com/jones9682"
+                    ><img
+                      class="social"
+                      src="assets/images/github.png"
+                      alt="GitHub"
+                    />
+                  </a>
+                  <a href="www.linkedin.com/in/bobby-jones-jr-5157972b"
+                    ><img
+                      class="social"
+                      src="assets/images/linkedin.png"
+                      alt="LinkedIn"
+                    />
+                  </a>
                 </div>
-              </div>
+              </section>
             </div>
           </div>
         </div>
       </div>
     </main>
-    <footer class="navbar fixed-bottom navbar-light bg-dark">
+    <footer class="navbar fixed-bottom navbar-light bg-dark text-center">
       <a class="navbar-brand" href="#"></a>
       <p class="footer-text">&copy; Copyright 2020 Robert Jones Jr.</p>
-      <a href="https://github.com/jones9682?tab=repositories"
-        ><img
-          class="social"
-          src="assets/images/github.png"
-          height="40px"
-          width="40px"
-          alt="GitHub"
-        />
-      </a>
     </footer>
   </body>
 </html>
