updated code in html and css files

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           >
             <u class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a href="#About" class="nav-link">About</a>
+                <a href="#About-me" class="nav-link">About</a>
               </li>
               <li class="nav-item">
                 <a href="portfolio.html" class="nav-link">Portfolio</a>
@@ -69,12 +69,12 @@
     </header>
     <main>
       <!--ShowCase-->
-      <div id="bg-img"></div>
+      <div id="bg-img-about-me"></div>
       <!--About Me-->
       <div id="main-container" class="container">
         <div class="row">
           <div class="col">
-            <div id="About">
+            <div id="About-me">
               <section class="main-section">
                 <h1>About Me</h1>
                 <hr />
@@ -84,16 +84,18 @@
                   alt="Robert Jones Jr. profile photo"
                 />
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Rerum nulla veniam laboriosam, ut ullam voluptatibus dolore
-                  culpa dolorem dignissimos perspiciatis amet aliquid nostrum
-                  esse ipsam. Minus non deleniti fuga consequuntur?
+                  My name is Robert Jones Jr. and I am an aspiring web developer
+                  with skills ranging from front end design to back end server
+                  to client communication.
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. A,
-                  aspernatur magnam? Corrupti quaerat ea aliquam reiciendis,
-                  accusantium suscipit itaque sunt quidem dolor. Vero recusandae
-                  soluta id doloribus obcaecati, dolor optio.
+                  In My free time I enjoy fishing, camping, playing video games
+                  and spending quality time with my family.
+                </p>
+                <p>
+                  I am currently enrolled in a codeing bootcamp at UPENN, where
+                  i look foward to utilizing my skills out there in the real
+                  world.
                 </p>
               </section>
               <section class="sidebar">
@@ -107,7 +109,7 @@
                       alt="GitHub"
                     />
                   </a>
-                  <a href="www.linkedin.com/in/bobby-jones-jr-5157972b"
+                  <a href="https://linkedin.com/in/bobby-jones-jr-5157972b"
                     ><img
                       class="social"
                       src="assets/images/linkedin.png"
@@ -121,9 +123,8 @@
         </div>
       </div>
     </main>
-    <footer class="navbar fixed-bottom navbar-light bg-dark text-center">
-      <a class="navbar-brand" href="#"></a>
-      <p class="footer-text">&copy; Copyright 2020 Robert Jones Jr.</p>
+    <footer class="fixed-bottom">
+      <p>&copy; Copyright 2020 Robert Jones Jr.</p>
     </footer>
   </body>
 </html>
