--- a/contact.html
+++ b/contact.html
@@ -69,51 +69,73 @@
       </nav>
     </header>
     <main>
+      <div id="bg-img-contact"></div>
       <div id="main-container" class="container">
         <div class="row">
           <div class="col">
-            <section class="main-section">
-              <h1>Contact</h1>
-              <hr />
-              <form id="contact-form">
-                <li>
-                  <label for="name">Name</label>
-                  <input
-                    type="text"
-                    id="name"
-                    name="name"
-                    placeholder="John Smith"
-                    required="required"
-                  />
-                </li>
-                <li>
-                  <label for="email">Email</label>
-                  <input
-                    type="email"
-                    id="email"
-                    name="email"
-                    placeholder="example@gmail.com"
-                    required="required"
-                  />
-                </li>
-                <li>
-                  <label for="message">Message</label>
-                  <textarea
-                    id="message"
-                    name="message"
-                    required="required"
-                  ></textarea>
-                </li>
-                <input class="btn btn-primary" type="submit" value="Submit" />
-              </form>
-            </section>
+            <div id="Contact">
+              <section class="main-section">
+                <h1>Contact</h1>
+                <hr />
+                <form id="contact-form">
+                  <p>
+                    <label for="name">Name</label>
+                    <input
+                      type="text"
+                      id="name"
+                      name="name"
+                      placeholder="John Smith"
+                      required="required"
+                    />
+                  </p>
+                  <p>
+                    <label for="email">Email</label>
+                    <input
+                      type="email"
+                      id="email"
+                      name="email"
+                      placeholder="example@gmail.com"
+                      required="required"
+                    />
+                  </p>
+                  <p>
+                    <label for="message">Message</label>
+                    <textarea
+                      id="message"
+                      name="message"
+                      required="required"
+                    ></textarea>
+                  </p>
+                  <input class="btn btn-primary" type="submit" value="Submit" />
+                </form>
+              </section>
+              <section class="sidebar">
+                <div id="connect">
+                  <h2>Connect with Me</h2>
+
+                  <a href="https://github.com/jones9682"
+                    ><img
+                      class="social"
+                      src="assets/images/github.png"
+                      alt="GitHub"
+                    />
+                  </a>
+                  <a href="https://linkedin.com/in/bobby-jones-jr-5157972b"
+                    ><img
+                      class="social"
+                      src="assets/images/linkedin.png"
+                      alt="LinkedIn"
+                    />
+                  </a>
+                </div>
+              </section>
+            </div>
           </div>
         </div>
       </div>
     </main>
-    <footer class="navbar fixed-bottom navbar-light bg-dark">
-      <a class="navbar-brand" href="#"></a>
-      <p class="footer-text">&copy; Copyright 2020 Robert Jones Jr.</p>
+    <footer class="fixed-bottom">
+      <p>&copy; Copyright 2020 Robert Jones Jr.</p>
     </footer>
   </body>
 </html>
