--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a href="#" class="navbar-brand"><h3>Portfolio</h3></a>
+          <a href="#" class="navbar-brand"><h3>Robert Jones Jr.</h3></a>
           <div
             class="collapse navbar-collapse"
             id="navbarToggleExternalContent"
@@ -68,10 +68,48 @@
         </div>
       </nav>
     </header>
-    <main></main>
-    <footer class="navbar fixed-bottom navbar-light bg-dark">
-      <a class="navbar-brand" href="#"></a>
-      <p class="footer-text">&copy; Copyright 2020 Robert Jones Jr.</p>
+    <main>
+      <div id="bg-img-portfolio"></div>
+      <div id="main-container" class="container">
+        <div class="row">
+          <div class="col">
+            <div id="Portfolio">
+              <section class="main-section">
+                <h1>Portfolio</h1>
+                <hr />
+                <div class="projects">
+                  <img src="assets/images/rock_paper_scissors.png" alt="rock paper scissors image">
+                  </a>
+                  <h3>Rock Paper Scissors</h3>
+                </div>
+              </section>
+              <section class="sidebar">
+                <div id="connect">
+                  <h2>Connect with Me</h2>
+
+                  <a href="https://github.com/jones9682"
+                    ><img
+                      class="social"
+                      src="assets/images/github.png"
+                      alt="GitHub"
+                    />
+                  </a>
+                  <a href="https://linkedin.com/in/bobby-jones-jr-5157972b"
+                    ><img
+                      class="social"
+                      src="assets/images/linkedin.png"
+                      alt="LinkedIn"
+                    />
+                  </a>
+                </div>
+              </section>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="fixed-bottom">
+      <p>&copy; Copyright 2020 Robert Jones Jr.</p>
     </footer>
   </body>
 </html>
