updated about me bio

--- a/index.html
+++ b/index.html
@@ -84,32 +84,34 @@
                   alt="Robert Jones Jr. profile photo"
                 />
                 <p>
-                  My name is Robert Jones Jr. and I am an aspiring web developer
-                  with skills ranging from front end design to back end server
-                  to client communication.
-                </p>
-                <p>
-                  In My free time I enjoy fishing, camping, playing video games
-                  and spending quality time with my family.
+                  My name is Robert Jones Jr. I grew up in New Jersey. I've
+                  always had a passion for technology and I am egar to learn all
+                  there is to know about programming!
                 </p>
                 <p>
                   I am currently enrolled in a codeing bootcamp at UPENN, where
                   i look foward to utilizing my skills out there in the real
                   world.
                 </p>
+                <p>
+                  In My free time I enjoy fishing, camping, playing video games
+                  and spending quality time with my family.
+                </p>
               </section>
               <section class="sidebar">
                 <div id="connect">
                   <h2>Connect with Me</h2>
 
-                  <a href="https://github.com/jones9682"
+                  <a href="https://github.com/jones9682" target="blank"
                     ><img
                       class="social"
                       src="assets/images/github.png"
                       alt="GitHub"
                     />
                   </a>
-                  <a href="https://linkedin.com/in/bobby-jones-jr-5157972b"
+                  <a
+                    href="https://linkedin.com/in/bobby-jones-jr-5157972b"
+                    target="blank"
                     ><img
                       class="social"
                       src="assets/images/linkedin.png"
