--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,9 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a href="#" class="navbar-brand"><h3>Robert Jones Jr.</h3></a>
+          <a href="index.html" class="navbar-brand"
+            ><h3>Robert Jones Jr.</h3></a
+          >
           <div
             class="collapse navbar-collapse"
             id="navbarToggleExternalContent"
@@ -78,23 +80,52 @@
                 <h1>Portfolio</h1>
                 <hr />
                 <div class="projects">
-                  <img src="assets/images/rock_paper_scissors.png" alt="rock paper scissors image">
-                  </a>
+                  <img
+                    src="assets/images/rock_paper_scissors.png"
+                    alt="rock paper scissors image"
+                  />
                   <h3>Rock Paper Scissors</h3>
+                </div>
+                <div class="projects">
+                  <img
+                    src="assets/images/rpg_board_game.jpg"
+                    alt="RPG Game image"
+                  />
+                  <h3>RPG Game</h3>
+                </div>
+                <div class="projects">
+                  <img
+                    src="assets/images/word_guess.jpg"
+                    alt="Word Guess image"
+                  />
+                  <h3>Word Guess</h3>
+                </div>
+                <div class="projects">
+                  <img src="assets/images/trivia.jpg" alt="Trivia Game image" />
+                  <h3>Trivia Game</h3>
+                </div>
+                <div class="projects">
+                  <img
+                    src="assets/images/wiget_icons.png"
+                    alt="Widget icons image"
+                  />
+                  <h3>Info Widget</h3>
                 </div>
               </section>
               <section class="sidebar">
                 <div id="connect">
                   <h2>Connect with Me</h2>
 
-                  <a href="https://github.com/jones9682"
+                  <a href="https://github.com/jones9682" target="blank"
                     ><img
                       class="social"
                       src="assets/images/github.png"
                       alt="GitHub"
                     />
                   </a>
-                  <a href="https://linkedin.com/in/bobby-jones-jr-5157972b"
+                  <a
+                    href="https://linkedin.com/in/bobby-jones-jr-5157972b"
+                    target="blank"
                     ><img
                       class="social"
                       src="assets/images/linkedin.png"
