updated spelling errors in about me bio

--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
                 />
                 <p>
                   My name is Robert Jones Jr. I grew up in New Jersey. I've
-                  always had a passion for technology and I am egar to learn all
-                  there is to know about programming!
+                  always had a passion for technology and I am eagar to learn
+                  all there is to know about programming!
                 </p>
                 <p>
-                  I am currently enrolled in a codeing bootcamp at UPENN, where
-                  i look foward to utilizing my skills out there in the real
+                  I am currently enrolled in a coding bootcamp at UPENN, where i
+                  look foward to utilizing my skills out there in the real
                   world.
                 </p>
                 <p>
-                  In My free time I enjoy fishing, camping, playing video games
-                  and spending quality time with my family.
+                  During My free time I enjoy fishing, camping, playing video
+                  games and spending quality time with my family.
                 </p>
               </section>
               <section class="sidebar">
