corrected some errors found with validation service

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
             id="navbarToggleExternalContent"
           >
             <u class="navbar-nav ml-auto">
-              <li class="nav-item">
+              <li>
                 <a href="#About-me" class="nav-link">About</a>
               </li>
-              <li class="nav-item">
+              <li>
                 <a href="portfolio.html" class="nav-link">Portfolio</a>
               </li>
-              <li class="nav-item">
+              <li>
                 <a href="contact.html" class="nav-link">Contact</a>
               </li>
             </u>
@@ -106,7 +106,7 @@
                     ><img
                       class="social"
                       src="assets/images/github.png"
-                      alt="GitHub"
+                      alt="GitHub icon"
                     />
                   </a>
                   <a
@@ -115,7 +115,7 @@
                     ><img
                       class="social"
                       src="assets/images/linkedin.png"
-                      alt="LinkedIn"
+                      alt="LinkedIn icon"
                     />
                   </a>
                 </div>
