--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             class="collapse navbar-collapse"
             id="navbarToggleExternalContent"
           >
-            <u class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto">
               <li>
                 <a href="#About-me" class="nav-link">About</a>
               </li>
@@ -62,7 +62,7 @@
               <li>
                 <a href="contact.html" class="nav-link">Contact</a>
               </li>
-            </u>
+            </ul>
           </div>
         </div>
       </nav>
