fixed element error <u> to <ul>

--- a/contact.html
+++ b/contact.html
@@ -55,17 +55,17 @@
             class="collapse navbar-collapse"
             id="navbarToggleExternalContent"
           >
-            <u class="navbar-nav ml-auto">
-              <li class="nav-item">
+            <ul class="navbar-nav ml-auto">
+              <li>
                 <a href="index.html" class="nav-link">About</a>
               </li>
-              <li class="nav-item">
+              <li>
                 <a href="portfolio.html" class="nav-link">Portfolio</a>
               </li>
-              <li class="nav-item">
+              <li>
                 <a href="contact.html" class="nav-link">Contact</a>
               </li>
-            </u>
+            </ul>
           </div>
         </div>
       </nav>
