--- a/portfolio.html
+++ b/portfolio.html
@@ -1,146 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="assets/css/mystyle.css" />
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-      crossorigin="anonymous"
-    ></script>
-    <title>My Portfolio Website</title>
-  </head>
-  <body>
-    <!--Navbar-->
-    <header id="Header">
-      <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
-        <div class="container">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarToggleExternalContent"
-            aria-controls="navbarToggleExternalContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a href="index.html" class="navbar-brand"
-            ><h3>Robert Jones Jr.</h3></a
-          >
-          <div
-            class="collapse navbar-collapse"
-            id="navbarToggleExternalContent"
-          >
-            <ul class="navbar-nav ml-auto">
-              <li>
-                <a href="index.html" class="nav-link">About</a>
-              </li>
-              <li>
-                <a href="portfolio.html" class="nav-link">Portfolio</a>
-              </li>
-              <li>
-                <a href="contact.html" class="nav-link">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <div id="bg-img-portfolio"></div>
-      <div id="main-container" class="container">
-        <div class="row">
-          <div class="col">
-            <div id="Portfolio">
-              <section class="main-section">
-                <h1>Portfolio</h1>
-                <hr />
-                <div class="projects">
-                  <img
-                    src="assets/images/rock_paper_scissors.png"
-                    alt="rock paper scissors image"
-                  />
-                  <h3>Rock Paper Scissors</h3>
-                </div>
-                <div class="projects">
-                  <img
-                    src="assets/images/rpg_board_game.jpg"
-                    alt="RPG Game image"
-                  />
-                  <h3>RPG Game</h3>
-                </div>
-                <div class="projects">
-                  <img
-                    src="assets/images/word_guess.jpg"
-                    alt="Word Guess image"
-                  />
-                  <h3>Word Guess</h3>
-                </div>
-                <div class="projects">
-                  <img src="assets/images/trivia.jpg" alt="Trivia Game image" />
-                  <h3>Trivia Game</h3>
-                </div>
-                <div class="projects">
-                  <img
-                    src="assets/images/wiget_icons.png"
-                    alt="Widget icons image"
-                  />
-                  <h3>Info Widget</h3>
-                </div>
-              </section>
-              <section class="sidebar">
-                <div id="connect">
-                  <h2>Connect with Me</h2>
 
-                  <a href="https://github.com/jones9682" target="blank"
-                    ><img
-                      class="social"
-                      src="assets/images/github.png"
-                      alt="GitHub"
-                    />
-                  </a>
-                  <a
-                    href="https://linkedin.com/in/bobby-jones-jr-5157972b"
-                    target="blank"
-                    ><img
-                      class="social"
-                      src="assets/images/linkedin.png"
-                      alt="LinkedIn"
-                    />
-                  </a>
-                </div>
-              </section>
-            </div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+  <link rel="stylesheet" href="assets/css/mystyle.css" />
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
+  <title>My Portfolio Website</title>
+</head>
+
+<body>
+  <!--Navbar-->
+  <header id="Header">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent"
+          aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a href="index.html" class="navbar-brand">
+          <h3>Robert Jones Jr.</h3>
+        </a>
+        <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
+          <ul class="navbar-nav ml-auto">
+            <li>
+              <a href="index.html" class="nav-link">About</a>
+            </li>
+            <li>
+              <a href="portfolio.html" class="nav-link">Portfolio</a>
+            </li>
+            <li>
+              <a href="contact.html" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <div id="bg-img-portfolio"></div>
+    <div id="main-container" class="container">
+      <div class="row">
+        <div class="col">
+          <div id="Portfolio">
+            <section class="main-section">
+              <h1>Portfolio</h1>
+              <hr />
+              <div class="projects">
+                <a href="https://jones9682.github.io/Password-Generator/" target="blank">
+                  <img src="assets/images/password_generator.png" alt="password generator image" /></a>
+                <h3>Password Generator</h3>
+              </div>
+              <div class="projects">
+                <a href="https://jones9682.github.io/Third-Party-APIs-Work-Day-Scheduler/" target="blank">
+                  <img src="assets/images/work_day_scheduler.png" alt="Work Day Scheduler" /></a>
+                <h3>Work Day Scheduler</h3>
+              </div>
+              <div class="projects">
+                <a href="https://millhouse36.github.io/Covid-19-contact-tracing-and-data-app/" target="blank">
+                  <img src="assets/images/covid_19_us_travel_assistant.jpg" alt="Covid-19 Travel Assistant" /></a>
+                <h3>Project 1</h3>
+              </div>
+              <div class="projects">
+                <img src="assets/images/trivia.jpg" alt="Trivia Game image" />
+                <h3>Trivia Game</h3>
+              </div>
+              <div class="projects">
+                <img src="assets/images/wiget_icons.png" alt="Widget icons image" />
+                <h3>Info Widget</h3>
+              </div>
+            </section>
+            <section class="sidebar">
+              <div id="connect">
+                <h2>Connect with Me</h2>
+
+                <a href="https://github.com/jones9682" target="blank"><img class="social" src="assets/images/github.png"
+                    alt="GitHub" />
+                </a>
+                <a href="https://linkedin.com/in/bobby-jones-jr-5157972b" target="blank"><img class="social"
+                    src="assets/images/linkedin.png" alt="LinkedIn" />
+                </a>
+              </div>
+            </section>
           </div>
         </div>
       </div>
-    </main>
-    <footer class="fixed-bottom">
-      <p>&copy; Copyright 2020 Robert Jones Jr.</p>
-    </footer>
-  </body>
+    </div>
+  </main>
+  <footer class="fixed-bottom">
+    <p>&copy; Copyright 2020 Robert Jones Jr.</p>
+  </footer>
+</body>
+
 </html>
