added new projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -65,17 +65,18 @@
               </div>
               <div class="projects">
                 <a href="https://jones9682.github.io/Third-Party-APIs-Work-Day-Scheduler/" target="blank">
-                  <img src="assets/images/work_day_scheduler.png" alt="Work Day Scheduler" /></a>
+                  <img src="assets/images/work_day_scheduler.png" alt="Work Day Scheduler image" /></a>
                 <h3>Work Day Scheduler</h3>
               </div>
               <div class="projects">
                 <a href="https://millhouse36.github.io/Covid-19-contact-tracing-and-data-app/" target="blank">
-                  <img src="assets/images/covid_19_us_travel_assistant.jpg" alt="Covid-19 Travel Assistant" /></a>
+                  <img src="assets/images/covid_19_us_travel_assistant.jpg" alt="Covid-19 Travel Assistant image" /></a>
                 <h3>Project 1</h3>
               </div>
               <div class="projects">
-                <img src="assets/images/trivia.jpg" alt="Trivia Game image" />
-                <h3>Trivia Game</h3>
+                <a href="https://jones9682.github.io/Star-Wars-Quiz/" target="blank">
+                  <img src="assets/images/star_wars_quiz.png" alt="Star Wars Quiz image" /></a>
+                <h3>Star Wars Quiz</h3>
               </div>
               <div class="projects">
                 <img src="assets/images/wiget_icons.png" alt="Widget icons image" />
