--- a/portfolio.html
+++ b/portfolio.html
@@ -79,8 +79,9 @@
                 <h3>Star Wars Quiz</h3>
               </div>
               <div class="projects">
-                <img src="assets/images/wiget_icons.png" alt="Widget icons image" />
-                <h3>Info Widget</h3>
+                <a href="https://jones9682.github.io/Weather-Dashboard/" target="blank">
+                  <img src="assets/images/sky_with_clouds.jpg" alt="sky image" /></a>
+                <h3>Weather Dashboard</h3>
               </div>
             </section>
             <section class="sidebar">
