--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
               <div class="projects">
                 <a href="https://millhouse36.github.io/Covid-19-contact-tracing-and-data-app/" target="blank">
                   <img src="assets/images/covid_19_us_travel_assistant.jpg" alt="Covid-19 Travel Assistant image" /></a>
-                <h3>Project 1</h3>
+                <h3>Covid 19 U.S. Travel Assistant</h3>
               </div>
               <div class="projects">
                 <a href="https://jones9682.github.io/Star-Wars-Quiz/" target="blank">
