updated about me

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
               <a href="#About-me" class="nav-link">About</a>
             </li>
             <li>
+              <a href="assets/documents/Bobby Updated Resume - July 2020.pdf" target="blank" class="nav-link">Resume</a>
+            </li>
+            <li>
               <a href="portfolio.html" class="nav-link">Portfolio</a>
             </li>
             <li>
@@ -67,9 +70,9 @@
                 all there is to know about programming!
               </p>
               <p>
-                I am currently enrolled in a coding bootcamp at UPENN, where i
-                look foward to utilizing my skills out there in the real
-                world.
+                I am currently enrolled in Penn LPS Coding Bootcamp, where i
+                look foward to utilizing my skills to enter the world of designing
+                and building web applications.
               </p>
               <p>
                 During My free time I enjoy fishing, camping, playing video
