--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
                 games and spending quality time with my family.
               </p>
             </section>
+            <!-- <iframe
+              src="https://docs.google.com/document/d/e/2PACX-1vS2Px-ngbeVYj8TTgQqareg3-xZQ-ak5MvNIm_udj6f2jxeFNV-3T2V9XJjGdXH4owcO_SekhpDQDGW/pub?embedded=true"></iframe> -->
             <section class="sidebar">
               <div id="connect">
                 <h2>Connect with Me</h2>
