updated linkedin path

--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
                 <a href="https://github.com/jones9682" target="blank"><img class="social" src="assets/images/github.png"
                     alt="GitHub" />
                 </a>
-                <a href="https://linkedin.com/in/bobby-jones-jr-5157972b" target="blank"><img class="social"
+                <a href="https://www.linkedin.com/in/robert-jones-jr-5157972b" target="blank"><img class="social"
                     src="assets/images/linkedin.png" alt="LinkedIn" />
                 </a>
               </div>
