added repo links to projects headers

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,27 +61,37 @@
               <div class="projects">
                 <a href="https://jones9682.github.io/Password-Generator/" target="blank">
                   <img src="assets/images/password_generator.png" alt="password generator image" /></a>
-                <h3>Password Generator</h3>
+                <a href="https://github.com/jones9682/Password-Generator" target="blank">
+                  <h3>Password Generator</h3>
+                </a>
               </div>
               <div class="projects">
                 <a href="https://jones9682.github.io/Third-Party-APIs-Work-Day-Scheduler/" target="blank">
                   <img src="assets/images/work_day_scheduler.png" alt="Work Day Scheduler image" /></a>
-                <h3>Work Day Scheduler</h3>
+                <a href="https://github.com/jones9682/Third-Party-APIs-Work-Day-Scheduler" target="blank">
+                  <h3>Work Day Scheduler</h3>
+                </a>
               </div>
               <div class="projects">
                 <a href="https://millhouse36.github.io/Covid-19-contact-tracing-and-data-app/" target="blank">
                   <img src="assets/images/covid_19_us_travel_assistant.jpg" alt="Covid-19 Travel Assistant image" /></a>
-                <h3>Covid-19 U.S. Travel Assistant</h3>
+                <a href="https://github.com/MIllhouse36/Covid-19-contact-tracing-and-data-app" target="blank">
+                  <h3>Covid-19 U.S. Travel Assistant</h3>
+                </a>
               </div>
               <div class="projects">
                 <a href="https://jones9682.github.io/Star-Wars-Quiz/" target="blank">
                   <img src="assets/images/star_wars_quizUC.png" alt="Star Wars Quiz image" /></a>
-                <h3>Star Wars Quiz</h3>
+                <a href="https://github.com/jones9682/Star-Wars-Quiz" target="blank">
+                  <h3>Star Wars Quiz</h3>
+                </a>
               </div>
               <div class="projects">
                 <a href="https://jones9682.github.io/Weather-Dashboard/" target="blank">
                   <img src="assets/images/sky_with_cloudsUC.jpg" alt="sky image" /></a>
-                <h3>Weather Dashboard</h3>
+                <a href="https://github.com/jones9682/Weather-Dashboard" target="blank">
+                  <h3>Weather Dashboard</h3>
+                </a>
               </div>
             </section>
             <section class="sidebar">
