updated file path to resume

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a href="#About-me" class="nav-link">About</a>
             </li>
             <li>
-              <a href="assets/documents/Bobby Updated Resume - July 2020.pdf" target="blank" class="nav-link">Resume</a>
+              <a href="assets/documents/RJonesJrResume.pdf" target="blank" class="nav-link">Resume</a>
             </li>
             <li>
               <a href="portfolio.html" class="nav-link">Portfolio</a>
