updated linkedin URL

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <a href="https://github.com/jones9682" target="blank"><img class="social" src="assets/images/github.png"
                     alt="GitHub icon" />
                 </a>
-                <a href="https://www.linkedin.com/in/robert-jones-jr-5157972b" target="blank"><img class="social"
+                <a href="https://www.linkedin.com/in/robertjonesjr82" target="blank"><img class="social"
                     src="assets/images/linkedin.png" alt="LinkedIn icon" />
                 </a>
               </div>
