--- a/portfolio.html
+++ b/portfolio.html
@@ -87,10 +87,17 @@
                 </a>
               </div>
               <div class="projects">
-                <a href="https://jones9682.github.io/Weather-Dashboard/" target="blank">
-                  <img src="assets/images/sky_with_cloudsUC.jpg" alt="sky image" /></a>
-                <a href="https://github.com/jones9682/Weather-Dashboard" target="blank">
-                  <h3>Weather Dashboard</h3>
+                <a href="https://eat-da-burger-42830.herokuapp.com/" target="blank">
+                  <img src="assets/images/burger.png" alt="burger image" /></a>
+                <a href="https://github.com/jones9682/Eat-Da-Burger" target="blank">
+                  <h3>Eat-Da-Burger</h3>
+                </a>
+              </div>
+              <div class="projects">
+                <a href="https://project-2-group1.herokuapp.com/7" target="blank">
+                  <img src="assets/images/wineALotMS.png" alt="wine image" /></a>
+                <a href="https://github.com/ram-sah/Project-2" target="blank">
+                  <h3>Wine 'A' Lot Management System</h3>
                 </a>
               </div>
             </section>
