updated about me

--- a/index.html
+++ b/index.html
@@ -65,14 +65,21 @@
               <hr />
               <img src="assets/images/profile-img.jpg" class="auth-image" alt="Robert Jones Jr. profile photo" />
               <p>
-                My name is Robert Jones Jr. I grew up in New Jersey. I've
-                always had a passion for technology and I am eagar to learn
-                all there is to know about programming!
-              </p>
-              <p>
-                I am currently enrolled in Penn LPS Coding Bootcamp, where i
-                look foward to utilizing my skills to enter the world of designing
-                and building web applications.
+                My name is Robert Jones Jr. I grew up in New Jersey. I'vealways had a passion for technology and I am
+                Self-motivated Entry Level Full Stack Web Developer with a background in Maintenance, Project
+                Management,
+                and life-long dedication to learning. Motivated towards game-design and showing my ability to problem
+                solve.
+                Experience in providing a high level of customer service to clients and customers while keeping a
+                consistent
+                work ethic. Passionate about designing and developing web applications utilizing skills in JavaScript,
+                HTML5,
+                API’s, jQuery as well maintaining the functionality of the website. Highly adept at conveying complex
+                technical
+                information to a variety of professional and lay audiences in a clear and understandable manner. Excited
+                to
+                leverage my skills in the future as part of a fast-paced, quality-driven team in order to build better
+                experiences on the web.
               </p>
               <p>
                 During My free time I enjoy fishing, camping, playing video
